# ScratchPad

./: Solution1.sln
BenchmarkAht/: CMakeLists.txt  main.cpp  mybenchmark
ConsoleApp1/: Program.cs
TestRobotInterfaceProtoFiles/: TestRobotInterfaceProtoFiles.csproj
TestStringComparer/: Program.cs
TestStringIntern/: Program.cs
